--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,6 +13,7 @@
       <main>
         <p id="notice"><%= notice %></p>
       <%= yield %>
+      <!--応用2-5 各viewページを表示させるためyieldメソッドを追記-->
       </main>
     <%= render 'layouts/footer' %>
   </body>
