--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -2,6 +2,19 @@
   <div class='row'>
     <div class="col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 mx-auto">
   		<h1>Editing Book</h1>
+
+  		<% if @book.errors.any? %>
+  		  <div id="error_explanation">
+  		    <h3><%= @book.errors.count %>error prohibited this obj from being saved:</h3>
+  		    <ul>
+  		      <% @book.errors.full_messages.each do |message| %>
+  		        <li><%= message %></li>
+  		      <% end %>
+  		    </ul>
+  		  </div>
+  		<% end %>
+  		<!--応用2-28 更新時にもエラー文が表示されるよう上記を追記-->
+
   		<%= render 'form', book: @book %>
   		<%= link_to 'Show', @book, class: "book_#{@book.id}" %> |
   		<%= link_to 'Back', books_path, class: "back" %>
