--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -2,9 +2,11 @@
   <div class='row'>
     <div class='col-md-3'>
       <h2>User info</h2>
-      <%= render 'users/info', user: @user %>
+      <%= render 'users/info', user: @book.user %>
+      <!--応用2-20 _info.html.erbで未定義になっており、引数を渡さないといけないため部分テンプレート内のローカル変数をuserとし、コントローラーで定義した@book.userを入れる-->
       <h2 class="mt-3">New book</h2>
-      <%= render 'form', book: @book %>
+      <%= render 'form', book: @book_new %>
+      <!--応用2-22 新規に作った@book_new変数に変更-->
     </div>
     <div class='col-md-8 offset-md-1'>
   		<h2>Book detail</h2>
@@ -21,6 +23,8 @@
             <td><%= link_to 'Edit', edit_book_path(@book.id), class: "btn btn-sm btn-success edit_book_#{@book.id}" %></td>
             <td><%= link_to 'Destroy', book_path(@book.id), method: :delete, data: { confirm: '本当に消しますか？' }, class: "btn btn-sm btn-danger destroy_book_#{@book.id}"%></td>
           <% end %>
+          <!--応用2-28 他ユーザーが投稿した本の編集、削除のリンクを表示させないためif文を挿入-->
+          <!--if ~~==current_userは投稿したユーザーとログインしているユーザーが一致していたらという意味-->
         </tr>
       </table>
     </div>
