--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -7,6 +7,7 @@
         <div class="field">
           <%= f.label :name %><br />
           <%= f.text_field :name, autofocus: true, class: "name" %>
+          <!--応用2-8 nameをtextに変えf.text_fieldにする-->
         </div>
         <div class="field">
           <%= f.label :email %><br />
