--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -7,6 +7,7 @@
       <div class="form-group">
         <%= f.label :name %>
         <%= f.text_field :name, class: "form-control name" %>
+        <!--応用2-14 titleというカラムが定義されていないとなるのでnameに変更-->
       </div>
      <div class="form-group">
         <%= f.label :image %>
