--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,18 +1,18 @@
-<div class="container px-5 px-sm-0">
-  <div class="row">
-    <div class="col-md-3">
-      <h2>User info</h2>
-      <%= render 'info', user: current_user %>
+<div class="container">
+<div class="row">
+  <div class="col-md-3">
+    <h2>User info</h2>
+    <%= render 'info', user: current_user %>
 
-      <h2 class="mt-3">New book</h2>
-      <%= render 'books/form', book: @book %>
+    <h2 class="mt-3">New book</h2>
+    <%= render 'books/form', book: @book %>
+    <!--応用2-12 formファイルはbooksフォルダに格納されているのでbooks/formと記載-->
+  </div>
 
-      <div class="col-md-8 offset-md-1">
-        <h2>Users</h2>
-        <%= render 'index',users: @users %>
-      </div>
-
-    </div>
+  <div class="col-md-8 offset-md-1">
+    <h2>Users</h2>
+      <%= render 'index',users: @users %>
   </div>
 </div>
-
+</div>
+<!--応用2-13 bootstrapを使用したレイアウトを記載-->
