--- a/app/views/books/_index.html.erb
+++ b/app/views/books/_index.html.erb
@@ -9,7 +9,6 @@
   </thead>
   <tbody>
     <% @books.each do |book| %>
-    <!--応用2-11 userコントローラーで@books=@user.booksと定義されていたので先頭に@を追記-->
       <tr>
         <td><%= link_to(book.user) do %>
           <%= image_tag book.user.get_profile_image, size:'50x50' %>
@@ -17,6 +16,8 @@
         </td>
         <td><%= link_to book.title,book, class: "book_#{book.id}" %></td>
         <td><%= book.body %></td>
+        <td><%= link_to "#{book.book_comments.count}コメント", book_path(book.id) %></td>
+        <!--課題3 コメント実装 コメント件数を表示するため上記を追記-->
       </tr>
     <% end %>
   </tbody>
