--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -36,7 +36,28 @@
               <% end %>
             </td>
           <% end %>
-          <!--課題3 投稿画像に付けられたいいねに自分が含まれているかをfavorited_by?メソッドで判定-->
+          <!--課題3 いいね実装 投稿画像に付けられたいいねに自分が含まれているかをfavorited_by?メソッドで判定-->
+
+          <td>
+            コメント件数:<%= @book.book_comments.count %>
+            <% @book.book_comments.each do |book_comment| %>
+              <%= image_tag book_comment.user.get_profile_image(100,100) %>
+              <%= book_comment.user.name %>
+              <%= book_comment.created_at.strftime('%Y/%m/%d') %><%= book_comment.comment %>
+              <% if book_comment.user == current_user %>
+                <%= link_to "削除", book_comment_path(book_comment.book, book_comment), method: :delete %>
+              <% end %>
+              <!--課題3 コメント実装 コメント削除ボタンを実装するため上記のif文を追記-->
+            <% end %>
+          </td>
+
+          <td>
+            <%= form_with model:[@book, @book_comment] do |f| %>
+              <%= f.text_area :comment, row: '5', placeholder: "コメントをここに" %>
+              <%= f.submit "送信する" %>
+            <% end %>
+          </td>
+          <!--課題3 コメント実装 投稿詳細画面でコメント投稿できるよう上記2つのtdタグを追記-->
         </tr>
       </table>
     </div>
